tests/examples/bad/missing_file_tag_in_filedocblock.php
<?php
/**
 *
 *
 * @version 2.11
 * @copyright 2020 CN-Consult GmbH
 * @author Daniel Haas <daniel.haas@cn-consult.eu>
 */
 